layout shift fixed

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone {
-    border: 1px dashed var(--stroke-default);
+    border: 2px dashed transparent;
+    outline: 1px dashed var(--stroke-default);
     border-radius: .25rem;
 
     display: grid;
@@ -23,11 +24,10 @@
         color: #A8A29E;
     }
 
-    &:hover, &:has() {
-        border-width: 2px;
+    &:hover, &:has(input:focus) {
+        outline-width: 0;
         border-color: var(--stroke-highlight);
         background-color: var(--surface-secondary);
-        color: var(--text-tertiary);
 
         & p {
             color: var(--text-tertiary);
